adding booking model and controller and view

--- a/app/views/services/new.html.erb
+++ b/app/views/services/new.html.erb
@@ -1,11 +1,14 @@
-<%= simple_form_for(@service) do |f| %>
-  <%= f.input :offered_title %>
-  <%= f.input :needed_title %>
-  <%= f.input :deadline %>
-  <%= f.input :available_dates %>
-  <%= f.input :description_offered %>
-  <%= f.input :description_needed %>
-  <%= f.input :location %>
-  <%= f.submit %>
-<% end %>
+<div class="container">
+  <h2>Add your service</h2>
+  <%= simple_form_for(@service) do |f| %>
+    <%= f.input :needed_title, placeholder: 'Which service are you intersted in?', label:false %>
+    <%= f.input :description_needed, placeholder: 'Describe the needed service', label:false %>
+    <%= f.input :location, placeholder: 'Location', label:false %>
+    <%= f.input :deadline, placeholder: 'Any deadline?' %>
+    <%= f.input :offered_title, placeholder: 'About the service you offer?', label:false %>
+    <%= f.input :description_offered, placeholder: 'Describe the offered service?', label:false %>
+    <%= f.input :available_dates %>
+    <%= f.submit %>
+  <% end %>
+</div>
 
