--- a/app/views/services/index.html.erb
+++ b/app/views/services/index.html.erb
@@ -1,10 +1,62 @@
-<h1>All services</h1>
+<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://res.cloudinary.com/degqxezsx/image/upload/v1589197435/chris-liverani-9cd8qOgeNIY-unsplash_n1eddd.jpg);">
+  <div class="container">
+    <h1>Exchange Your Skill For <strong>Free</strong> Local Services!</h1>
+    <p>Taking money out of the equation </p>
+    <form novalidate="novalidate" class="simple_form search" action="/" accept-charset="UTF-8" method="get"><input name="utf8" type="hidden" value="&#x2713;" />
+      <div class="search-form-control form-group">
+        <input class="form-control string required" type="text" name="search[query]" id="search_query" />
+        <button name="button" type="submit" class="btn btn-flat">
+          <i class="fas fa-search"></i>
+        </button>
+      </div>
+    </form>
+    <a class="btn btn-flat" href="#"><strong><u> <%= link_to '+ Add a new service',  new_service_path %></u></a></strong>
+  </div>
+</div>
+
+<div class="cards-flex">
 <ul>
   <% @services.each do |service| %>
-    <li> Offered Service title: <%= service.offered_title %>
-         Needed Service title : <%= service.needed_title %>
-    </li>
-  <% end %>
-
-  <%= link_to 'Add new service',  new_service_path %>
-</ul>
+    <div class="card-trip">
+      <img src="https://res.cloudinary.com/degqxezsx/image/upload/v1589198407/Screen_Shot_2020-05-11_at_14.59.50_uzka0d.png" />
+      <div class="card-trip-infos">
+        <div>
+          <h2><strong>Needed:<%= service.needed_title %></strong></h2>
+          <h2><u>Offered:<%= service.offered_title %></u></h2>
+          <p><%= link_to service.location, service_path(service) %></p>
+    </div></ul>
+  <%end %>
+<ul>
+<% @services.each do |service| %>
+  <div class="card-trip">
+    <img src="https://res.cloudinary.com/degqxezsx/image/upload/v1589198407/Screen_Shot_2020-05-11_at_14.59.50_uzka0d.png" />
+    <div class="card-trip-infos">
+      <div>
+        <h2><strong>Needed:<%= service.needed_title %></strong></h2>
+        <h2><u>Offered: <%= service.offered_title %></u></h2>
+        <p><%= link_to service.location, service_path(service) %></p>
+  </div></ul>
+<%end %>
+<ul>
+<% @services.each do |service| %>
+  <div class="card-trip">
+    <img src="https://res.cloudinary.com/degqxezsx/image/upload/v1589198407/Screen_Shot_2020-05-11_at_14.59.50_uzka0d.png" />
+    <div class="card-trip-infos">
+      <div>
+        <h2><strong>Needed:<%= service.needed_title %></strong></h2>
+        <h2><u>Offered: <%= service.offered_title %></u></h2>
+        <p><%= link_to service.location, service_path(service) %></p>
+  </div></ul>
+  <%end %>
+    <ul>
+    <% @services.each do |service| %>
+      <div class="card-trip">
+        <img src="https://res.cloudinary.com/degqxezsx/image/upload/v1589198407/Screen_Shot_2020-05-11_at_14.59.50_uzka0d.png" />
+        <div class="card-trip-infos">
+          <div>
+            <h2><strong>Needed:<%= service.needed_title %></strong></h2>
+            <h2><u>Offered: <%= service.offered_title %></u></h2>
+            <p><%= link_to service.location, service_path(service) %></p>
+      </div></ul>
+      <%end %>
+  </div>
