--- a/app/views/services/show.html.erb
+++ b/app/views/services/show.html.erb
@@ -1,8 +1,28 @@
-<h2><%= service.offered_title %></h2>
+<div class="center">
+  <img src="https://res.cloudinary.com/degqxezsx/image/upload/v1589198407/Screen_Shot_2020-05-11_at_14.59.50_uzka0d.png">
+
+  <h2><%= @service.offered_title %></h2>
+  <p><%= @service.location %></p>
+
+  <hr size="20">
+
+  <h2><u>About the needed service </u></h2>
+   <p><%=@service.description_needed %></p>
+   <%= link_to "Exchange Service",  new_service_booking_path(@service) %>
+   <p><%= @service.deadline %></p>
+
+   <hr size="20">
+   <h2><u>About the Service offered by the user</u></h2>
+   <p><%=@service.description_offered%></p>
+   <button>Contant user name</button>
+   <p><%= @service.location %></p>
+   <!--  <%= @service_status %> -->
 
 
-<%= link_to 'Edit',  edit_service_path(@service) %>
-<%= link_to 'Back', services_path %>
-<%#= link_to 'Leave a Review', path(@service) %>
-<%= link_to "Remove", service_path(@service), method: :delete,
-                  data: { confirm: "Are you sure?" } %>
+  <%= link_to 'Edit',  edit_service_path(@service) %>
+  <%= link_to 'Back', services_path %>
+  <%#= link_to 'Leave a Review', path(@service) %>
+  <%= link_to "Remove", service_path(@service), method: :delete,
+                    data: { confirm: "Are you sure?" } %>
+
+</div>
