--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -11,7 +11,9 @@
   overflow: hidden;
   background: white;
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
-  width: 360px;
+  width: 20%;
+  margin-left: 30px;
+  margin-top: 30px;
 }
 
 .card-trip > img {
