--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,12 +26,11 @@
           <%= link_to "Home", services_path %>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Messages</a>
+         <%= link_to "Dashboad", dashboard_path %>
         </li>
         <li class="nav-item dropdown">
           <img class="avatar dropdown-toggle" id="navbarDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" src="https://kitt.lewagon.com/placeholder/users/ssaunier" />
           <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-            <%= link_to "Home",  destroy_user_session_path %>
             <a class="dropdown-item" href="#">Sign out</a>
             <a class="dropdown-item" href="#">Another action</a>
           </div>
