--- a/app/views/services/show.html.erb
+++ b/app/views/services/show.html.erb
@@ -18,11 +18,14 @@
    <p><%= @service.location %></p>
    <!--  <%= @service_status %> -->
 
-
-  <%= link_to 'Edit',  edit_service_path(@service) %>
+  <% if policy(Service).edit? %>
+    <%= link_to 'Edit',  edit_service_path(@service) %>
+  <% end %>
   <%= link_to 'Back', services_path %>
-  <%#= link_to 'Leave a Review', path(@service) %>
+  <%= link_to 'Leave a User Review', new_review_path %>
+  <% if policy(Service).destroy? %>
   <%= link_to "Remove", service_path(@service), method: :delete,
                     data: { confirm: "Are you sure?" } %>
+  <% end %>
 
 </div>
