--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -37,11 +37,11 @@
 }
 
 
-.card-trip .card-trip-infos {
+.card-trip-infos {
   padding: 16px;
   display: flex;
   justify-content: space-between;
-  align-items: flex-end;
+  align-item: flex-end;
   position: relative;
 }
 
