--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,10 +1,8 @@
-
-@import "bootstrap";
-
 // Graphical variables
 @import "config/fonts";
 @import "config/colors";
 @import "config/bootstrap_variables";
+@import "Bootstrap";
 
 // External libraries
 @import "bootstrap/scss/bootstrap";
