change style to deploy

--- a/app/views/services/index.html.erb
+++ b/app/views/services/index.html.erb
@@ -1,4 +1,4 @@
-<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://res.cloudinary.com/degqxezsx/image/upload/v1589197435/chris-liverani-9cd8qOgeNIY-unsplash_n1eddd.jpg);">
+<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url('https://res.cloudinary.com/degqxezsx/image/upload/v1589197435/chris-liverani-9cd8qOgeNIY-unsplash_n1eddd.jpg');">
   <div class="container">
     <h1>Exchange Your Skill For <strong>Free</strong> Local Services!</h1>
     <p>Taking money out of the equation </p>
