--- a/app/assets/stylesheets/config/_bootstrap_variables.scss
+++ b/app/assets/stylesheets/config/_bootstrap_variables.scss
@@ -4,22 +4,22 @@
 // 3. You can override them below!
 
 // General style
-$font-family-sans-serif:  $body-font;
-$headings-font-family:    $headers-font;
-$body-bg:                 $light-gray;
-$font-size-base: 1rem;
+$font-family-sans-serif:  "Segoe UI Symbol";
+$headings-font-family:     null !default;
+$body-bg:                  $white !default;
+$font-size-base:  1rem !default;
 
 // Colors
-$body-color: $gray;
-$primary:    $blue;
-$success:    $green;
-$info:       $yellow;
-$danger:     $red;
-$warning:    $orange;
+$body-color: $gray-900 !default;
+$primary:    $blue !default;
+$success:    $green !default;
+$info:       $cyan !default;
+$danger:     $red !default;
+$warning:     $yellow !default;
 
 // Buttons & inputs' radius
-$border-radius:    2px;
-$border-radius-lg: 2px;
-$border-radius-sm: 2px;
+$border-radius:    .25rem !default;
+$border-radius-lg: .2rem !default;
+$border-radius-sm: .3rem !default;
 
 // Override other variables below!
