--- a/app/assets/stylesheets/config/_bootstrap_variables.scss
+++ b/app/assets/stylesheets/config/_bootstrap_variables.scss
@@ -3,23 +3,23 @@
 // 2. These variables are defined with default value (see https://robots.thoughtbot.com/sass-default)
 // 3. You can override them below!
 
-// General style
-$font-family-sans-serif:  "Segoe UI Symbol";
-$headings-font-family:     null !default;
-$body-bg:                  $white !default;
-$font-size-base:  1rem !default;
+// // General style
+// $font-family-sans-serif:  "Segoe UI Symbol";
+// $headings-font-family:     null !default;
+// $body-bg:                  $white !default;
+// $font-size-base:  1rem !default;
 
-// Colors
-$body-color: $gray-900 !default;
-$primary:    $blue !default;
-$success:    $green !default;
-$info:       $cyan !default;
-$danger:     $red !default;
-$warning:     $yellow !default;
+// // Colors
+// $body-color: $gray-900 !default;
+// $primary:    $blue !default;
+// $success:    $green !default;
+// $info:       $cyan !default;
+// $danger:     $red !default;
+// $warning:     $yellow !default;
 
-// Buttons & inputs' radius
-$border-radius:    .25rem !default;
-$border-radius-lg: .2rem !default;
-$border-radius-sm: .3rem !default;
+// // Buttons & inputs' radius
+// $border-radius:    .25rem !default;
+// $border-radius-lg: .2rem !default;
+// $border-radius-sm: .3rem !default;
 
 // Override other variables below!
