--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,5 +1,5 @@
 // Graphical variables
-@import "Bootstrap";
+@import "bootstrap";
 @import "config/bootstrap_variables";
 @import "config/fonts";
 @import "config/colors";
