update to push to heroku

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,6 +1,6 @@
 // Graphical variables
-@import "bootstrap";
-@import "config/bootstrap_variables";
+// @import "bootstrap";
+// @import "config/bootstrap_variables";
 @import "config/fonts";
 @import "config/colors";
 
