Add dotenv - Protect my secret data in .env file

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -7,7 +7,12 @@
   flex-grow: 0;
 }
 
+li a {
+  margin-right: 2.5rem;
+  font-size: 1.5rem;
+
+}
 .navbar-lewagon .navbar-brand img {
-  width: 65px;
+  width: 25%;
 }
 
