--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -5,22 +5,22 @@
 }
 
 .banner a {
-  margin-left: 2rem;
-  color: #6393D2;
+  margin-left: 1.5rem;
+  color: #6393fa;
+  font-size: 1.5rem;
 }
 
 .banner h1 {
   margin: 0;
-  color: #6393D2;
-  text-shadow: -1px -3px 5px rgba(0,0,0,0.2);
-  font-size: 32px;
-  font-weight: bold;
+  color: #6393FA;
+  text-shadow: -1px -3px 5px rgba(0, 0, 0, 0.2);
+  font-size: 2.5rem;
+  font-weight: bolder;
 }
 
 .banner p {
-  font-size: 25px;
-  color: #6393D2;
-  opacity: .7;
-  text-shadow: -1px 4px 5px rgba(0,0,0,0.2);
-  margin-left: 2rem;
+  font-size: 1.5rem;
+  color: #6393fa;
+  text-shadow: -1px 4px 5px rgba(0, 0, 0, 0.2);
+  margin-left: 1.5rem;
 }
