--- a/app/views/services/index.html.erb
+++ b/app/views/services/index.html.erb
@@ -10,7 +10,7 @@
         </button>
       </div>
     </form>
-    <a class="btn btn-flat" href="#"><strong><u> <%= link_to '+ Add a new service',  new_service_path %></u></a></strong>
+    <a class="btn btn-flat" href="#"><strong><%= link_to '+ Add a new service',  new_service_path %></a></strong>
   </div>
 </div>
 
