--- a/app/views/services/show.html.erb
+++ b/app/views/services/show.html.erb
@@ -1,7 +1,7 @@
-<div class="center">
+<div class="container center">
   <img src="https://res.cloudinary.com/degqxezsx/image/upload/v1589198407/Screen_Shot_2020-05-11_at_14.59.50_uzka0d.png">
 
-  <h2><%= @service.offered_title %></h2>
+  <h2>Offered service: <%= @service.offered_title %></h2>
   <p><%= @service.location %></p>
 
   <hr size="20">
