--- a/app/views/services/show.html.erb
+++ b/app/views/services/show.html.erb
@@ -1,6 +1,9 @@
 <div class="container center">
-  <img src="https://res.cloudinary.com/degqxezsx/image/upload/v1589198407/Screen_Shot_2020-05-11_at_14.59.50_uzka0d.png">
-
+  <% if @service.photo.attached? %>
+    <%= cl_image_tag @service.photo.key, height: 100, width: 100, crop: :fill%>
+  <% else %>
+    <img src="https://res.cloudinary.com/degqxezsx/image/upload/v1589198407/Screen_Shot_2020-05-11_at_14.59.50_uzka0d.png">
+  <% end %>
   <h2>Offered service: <%= @service.offered_title %></h2>
   <p><%= @service.location %></p>
 
@@ -29,3 +32,4 @@
   <% end %>
 
 </div>
+
