--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,11 +9,14 @@
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
-
   </head>
   <div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
     <a class="navbar-brand" href="#">
+      <% if current_user.avatar.attached? %>
+        <%= cl_image_tag avatar.key, height: 300, width: 400, crop: :fill %>
+      <% else %>
       <img src="https://res.cloudinary.com/degqxezsx/image/upload/v1589201496/Screen_Shot_2020-05-11_at_15.40.21_kr7pti.png" />
+    <% end %>
   </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
