--- a/app/views/services/show.html.erb
+++ b/app/views/services/show.html.erb
@@ -1,6 +1,8 @@
 <div class="container center">
-  <% if @service.photo.attached? %>
-    <%= cl_image_tag @service.photo.key, height: 100, width: 100, crop: :fill%>
+  <% if @service.photos.attached? %>
+    <% @service.photos.each do |photo| %>
+      <%= cl_image_tag photo.key, height: 300, width: 400, crop: :fill %>
+    <% end %>
   <% else %>
     <img src="https://res.cloudinary.com/degqxezsx/image/upload/v1589198407/Screen_Shot_2020-05-11_at_14.59.50_uzka0d.png">
   <% end %>
